added resume to topbar

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emailjs": "^4.0.1",
     "itype": "^3.0.1",
     "ityped": "^1.0.3",
+    "js-file-download": "^0.4.12",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
